Fix %magic-pseudo-element z-index

--- a/src/sass/core/libraries/_helpers.scss
+++ b/src/sass/core/libraries/_helpers.scss
@@ -1,7 +1,6 @@
 %magic-pseudo-element {
     content: "";
     position: absolute;
-    z-index: -1;
     top: 0;
     right: 0;
     bottom: 0;
